--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 									<ul class="list basic_info">
 										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 8st june, 1989</a></li>
 										<li><a href="#"><i class="lnr lnr-phone-handset"></i> 06 06 06 06 06</a></li>
-										<li><a href="#"><i class="lnr lnr-envelope"></i> adresse@gmail.com</a></li>
-										<li><a href="#"><i class="lnr lnr-home"></i> Adresse postal</a></li>
+										<li><a href="#"><i class="lnr lnr-envelope"></i> adress@gmail.com</a></li>
+										<li><a href="#"><i class="lnr lnr-home"></i> Adress postal</a></li>
 									</ul>
 									<ul class="list personal_social">
 										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
